gravitee-gateway-services/gravitee-gateway-services-kubernetes/src/main/admission-hook/admission-registration.yml
#
# Copyright (C) 2015 The Gravitee team (http://gravitee.io)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "admission-hook.gravitee.io"
webhooks:
  - name: "admission-hook.gravitee.io"
    rules:
      - apiGroups:   ["gravitee.io"]
        apiVersions: ["v1beta1"]
        operations:  ["CREATE", "UPDATE", "DELETE"]
        resources:   ["gravitee-plugins"]
        scope:       "Namespaced"
      - apiGroups:   ["gravitee.io"]
        apiVersions: ["v1beta1"]
        operations:  ["CREATE", "UPDATE", "DELETE"]
        resources:   ["gravitee-gateways"]
        scope:       "Namespaced"
      - apiGroups:   ["gravitee.io"]
        apiVersions: ["v1beta1"]
        operations:  ["CREATE", "UPDATE", "DELETE"]
        resources:   ["gravitee-services"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: default
        name: gateway-admission-webhook
        port: 18082
        path: "/_node/admission/plugins"
      caBundle: "MIIFHzCCAwegAwIBAgIUTV3qThWmni/n7Mb6Bg64Yzjbo5cwDQYJKoZIhvcNAQELBQAwHzEdMBsGA1UEAwwUZ2F0ZXdheS1hZG1pc3Npb24tY2EwHhcNMjEwMjI1MTUwNTMxWhcNMzEwMjIzMTUwNTMxWjAfMR0wGwYDVQQDDBRnYXRld2F5LWFkbWlzc2lvbi1jYTCCAiIwDQYJKoZIhvcNAQEBBQADggIPADCCAgoCggIBAKVlGjEzu+mvd1jWiYbpKJx0nEj0wBtl5JEyvSVSuSWs2xb3h5VkI1qJABs9DwytH9iZ/dk5sK35sksNqWmootKq81kTSbNzVaRPzWqhfNXIAwQvCS5XEoUiStYCoA0Qvx0rhGoL6Ua0aFoyDkEUnRxQu+JP/xw/0DH6pw7T5aHxX4TIz+X1jIXM0bGOZAWvZTBYcluCC2HsnHH1QXGJIC40DAaaScqNHYW2O0SRN9OossERceJ [...]
      #url: https://192.168.0.15:18082/_node/admission/plugins
    admissionReviewVersions: ["v1beta1"]
    sideEffects: None
    timeoutSeconds: 5
